--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,13 @@ android {
 }
 
 
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile files('libs/GenAsync.1.2.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
@@ -35,4 +37,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    configurations.all {
+        resolutionStrategy {
+            force 'com.android.support:support-annotations:23.1.1'
+        }
+    }
 }
+
